Exercise list, main screen wip

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,118 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">GetGoing</string>
-
-    <!-- google maps id-->
-    <string name="dialog_message" translatable="false">No saved data. Press OK to continue.</string>
-    <string name="confirm" translatable="false">OK</string>
-    <string name="delete_message" translatable="false">Delete record</string>
-
-    <!-- High accuracy mode alert dialog -->
-    <string name="alert_dialog_title">Enable device\'s GPS</string>
-    <string name="alert_dialog_message">Turn on your device\'s GPS.</string>
-    <string name="alert_dialog_positive_button">Settings</string>
-    <string name="alert_dialog_negative_button">Cancel</string>
-
-    <!-- Save button alert dialog -->
-    <string name="alert_dialog_title_save_btn">Save route</string>
-    <string name="alert_dialog_message_save_btn">Do you want to save this route?</string>
-    <string name="alert_dialog_positive_button_save_btn">OK</string>
-    <string name="alert_dialog_negative_button_save_btn">Cancel</string>
-    <string name="alert_dialog_route_saved">Route saved</string>
-
-    <!-- Reset button alert dialog -->
-    <string name="alert_dialog_title_reset_btn">Clear route data</string>
-    <string name="alert_dialog_message_reset_btn">Clear map and route data?</string>
-    <string name="alert_dialog_positive_reset_save_btn">OK</string>
-    <string name="alert_dialog_negative_reset_save_btn">Cancel</string>
-
-    <!-- Back pressed alert dialog -->
-    <string name="alert_dialog_title_back_pressed">Leave map</string>
-    <string name="alert_dialog_message_back_pressed">All your unsaved data will be lost.</string>
-    <string name="alert_dialog_positive_back_pressed">OK</string>
-    <string name="alert_dialog_negative_back_pressed">Cancel</string>
-
-    <!-- ShowData empty list alert dialog -->
-    <string name="alert_dialog_empty_title">You don\'t have any saved route yet!</string>
-
-    <!-- Notification when app is tracking in background -->
-    <string name="notification_title">GetGoing</string>
-    <string name="notification_text">Tracking…</string>
-
-    <!-- BarChart labels -->
-    <string name="chart_label_walk">Walk</string>
-    <string name="chart_label_run">Run</string>
-    <string name="chart_label_ride">Ride</string>
-
-    <!-- new strings -->
-    <string name="my_profile">My profile</string>
-    <string name="my_data">MY DATA</string>
-    <string name="placeholder_male">Male</string>
-    <string name="placeholder_21_year">21 year</string>
-    <string name="placeholder_185cm">185cm</string>
-    <string name="placeholder_85kg">85kg</string>
-    <string name="total_activities">TOTAL ACTIVITIES</string>
-    <string name="get_ready">Get ready</string>
-    <string name="placeholder_running">Running</string>
-    <string name="my_activities">My activities</string>
-    <string name="last_exercise">Last exercise</string>
-    <string name="view_all">View all</string>
-    <string name="choose_your_exercise">Choose your exercise</string>
-    <string name="can_we_burn_our_legs">Can we burn our legs?</string>
-    <string name="kcal">kcal</string>
-    <string name="running">Running</string>
-    <string name="min">min</string>
-    <string name="textview_age_end">" years"</string>
-
-    <!-- alertdialog radiogroup-->
-    <string-array name="genders">
-        <item>Male</item>
-        <item>Female</item>
-        <item>Other</item>
-    </string-array>
-
-    <!-- genders -->
-    <string name="gender_male">Male</string>
-    <string name="gender_female">Female</string>
-    <string name="gender_other">Other</string>
-    <string name="totalkm_0km">0km</string>
-    <string name="totalkcal_0kcal">0kcal</string>
-    <string name="walking">Walking</string>
-    <string name="cycling">Bicycling</string>
-    <string name="duration">Duration</string>
-    <string name="speed">Speed</string>
-    <string name="calories">Calories</string>
-    <string name="set_goal_exercise">Set goal for this exercise</string>
-    <string name="dialog_hint">0000</string>
-    <string name="back_button">Back button</string>
-    <string name="background_drawable_for_a_button">Background drawable for a button</string>
-    <string name="button">Button</string>
-    <string name="start_tracking">Start tracking</string>
-    <string name="stop_tracking">Stop tracking</string>
-    <string name="save_exercise">Save exercise</string>
-    <string name="reset_progress">Reset progress</string>
-    <string name="logo">Logo</string>
-    <string name="profile_icon">Profile icon</string>
-    <string name="distance">Distance</string>
-
-    <string name="energy_unit">kcal</string>
-    <string name="speed_unit">m/s</string>
-    <string name="dist_unit">km</string>
-    <string name="toggle_map_button">Toggle map button</string>
-    <string name="goal">Goal</string>
-    <string name="progress_bar_img">progress bar image</string>
-    <string name="progress_bar_goal_img">progress bar goal icon</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="alert_dialog_goal_0">Goal cannot be 0</string>
-    <string name="alert_dialog_title_incorrect_value">Incorrect value</string>
-    <string name="alert_dialog_delete_route">Delete permanently this route?</string>
-    <string name="route_deleted_msg">Route deleted</string>
-    <string name="alert_dialog_no_routes">No routes to display</string>
-    <string name="dark_mode">Dark mode</string>
-    <string name="time">time</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="last_exercise">Last exercise</string>
+    <string name="notification_title">GG</string>
+    <string name="notification_text">Tracking</string>
 </resources>
 
 
