--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="last_exercise">Last exercise</string>
     <string name="notification_title">GG</string>
     <string name="notification_text">Tracking</string>
+    <string name="back">back</string>
+    <string name="my_profile">My profile</string>
+    <string name="my_data">MY DATA</string>
+    <string name="total_activities">TOTAL ACTIVITIES</string>
 </resources>
 
 
