--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -4,11 +4,11 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="last_exercise">Last exercise</string>
     <string name="notification_title">GG</string>
-    <string name="notification_text">Tracking</string>
     <string name="back">back</string>
     <string name="my_profile">My profile</string>
     <string name="my_data">MY DATA</string>
     <string name="total_activities">TOTAL ACTIVITIES</string>
+    <string name="duration_distance_notification_text">Duration: %1$s\nDistance: %2$s</string>
 </resources>
 
 
